--- a/archi.html
+++ b/archi.html
@@ -11,52 +11,55 @@
 
 </head>
 <body>
-	<header id="header">
-		<a href="index.html" class="logo"><img style="height: 100px; width: auto; margin-left: 30px;" src="https://static.wixstatic.com/media/8e20e3_a7748ace886e4be7a8e491277ec17e36~mv2.png/v1/fill/w_138,h_140,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/8e20e3_ce47282406f64a23a1014f7f70da3aef.png"></a>
-		<nav class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="basic.html">Basic Info</a>
-				    <ul>
-					    <li><a style="margin-left: 0;" href="mestres.html">Mestres</a></li>
-					    <li><a style="margin-left: 0;" href="cords.html">Cordas</a></li>
-					    <li><a style="margin-left: 0;" href="history.html">History</a></li>
-				    </ul>
-				</li>
-				<li><a href="handbook.html">Handbook</a>
-					<ul>
-						<li><a style="margin-left: 0;" href="instruments.html">Instruments</a></li>
-						<li><a style="margin-left: 0;" href="list_r.html">Rhythms</a></li>
-						<li><a style="margin-left: 0;" href="songs.html">Songs</a></li>
-						<li><a style="margin-left: 0;" href="list_move.html">Movements</a></li>
-						<li><a style="margin-left: 0;" href="maculele.html">Maculele</a></li>
-                        <li><a style="margin-left: 0; display: none;" href="Movements.html">Samba de roda</a></li>
-					</ul>
-				</li>
-				<li><a href="archi.html">Archives</a>
-					<ul>
-						<li><a style="margin-left: 0; display: none;" href="insight.html">Insight</a></li>
-						<li><a style="margin-left: 0;" href="interview.html">Interviews</a></li>
-						<li><a style="margin-left: 0;" href="quotes.html">Mestres' Quotes</a></li>
-						<li><a style="margin-left: 0;" href="media.html">Media</a></li>
-					</ul>
-				</li>
-				<li><a href="about us.html">About us</a></li>
-				<li><a href="contacts.html">Contacts</a></li>
-		        <li class="menu-btn"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
-					<ul>
-						<li><a style="margin-left: 0;" href="index.html">Home</a></li>
-						<li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
-						<li><a style="margin-left: 0;" href="handbook.html">Handbook</a></li>
-						<li><a style="margin-left: 0;" href="archi.html">Archives</a></li>
-						<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
-						<li><a style="margin-left: 0;" href="contacts.html">Contacts</a></li>
-					</ul>
-				</li>
-			</ul>
-		</nav>
-
-	</header>
+    <section class="sec1">
+		<header id="header">
+			<a href="index.html" class="logo"><img style="height: 100px; width: auto; margin-left: 30px;" src="https://static.wixstatic.com/media/8e20e3_a7748ace886e4be7a8e491277ec17e36~mv2.png/v1/fill/w_138,h_140,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/8e20e3_ce47282406f64a23a1014f7f70da3aef.png"></a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="basic.html">Basic Info</a>
+						<ul>
+							<li><a style="margin-left: 0;" href="mestres.html">Mestres</a></li>
+							<li><a style="margin-left: 0;" href="cords.html">Cordas</a></li>
+							<li><a style="margin-left: 0;" href="history.html">History</a></li>
+						</ul>
+					</li>
+					<li><a href="handbook.html">Handbook</a>
+						<ul>
+							<li><a style="margin-left: 0;" href="instruments.html">Instruments</a></li>
+							<li><a style="margin-left: 0;" href="list_r.html">Rhythms</a></li>
+							<li><a style="margin-left: 0;" href="songs.html">Songs</a></li>
+							<li><a style="margin-left: 0;" href="list_move.html">Movements</a></li>
+							<li><a style="margin-left: 0;" href="maculele.html">Maculele</a></li>
+							<li><a style="margin-left: 0; display: none;" href="Movements.html">Samba de roda</a></li>
+						</ul>
+					</li>
+					<li><a href="archi.html">Archives</a>
+						<ul>
+							<li><a style="margin-left: 0; display: none;" href="insight.html">Insight</a></li>
+							<li><a style="margin-left: 0;" href="interview.html">Interviews</a></li>
+							<li><a style="margin-left: 0;" href="quotes.html">Mestres' Quotes</a></li>
+							<li><a style="margin-left: 0;" href="media.html">Media</a></li>
+						</ul>
+					</li>
+					<li><a href="about us.html">About us</a></li>
+					<li><a href="https://senzala.com.ua/">Senzala UA</a></li>
+					<li><a style="margin-right: 3rem;" href="contacts.html">Contacts</a></li>
+					<li class="menu-btn" style="width: 11.3rem;"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
+						<ul>
+							<li><a style="margin-left: 0;" href="index.html">Home</a></li>
+							<li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
+							<li><a style="margin-left: 0;" href="handbook.html">Handbook</a></li>
+							<li><a style="margin-left: 0;" href="archi.html">Archives</a></li>
+							<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
+							<li><a style="margin-left: 0;" href="https://senzala.com.ua/">Senzala UA</a></li>
+							<li><a style="margin-left: 0;" href="contacts.html">Contacts</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+		</header>
+	</section>
 
 	<section class="all">
 
