--- a/gil velho.html
+++ b/gil velho.html
@@ -44,14 +44,16 @@
 						</ul>
 					</li>
 					<li><a href="about us.html">About us</a></li>
+					<li><a href="https://senzala.com.ua/">Senzala UA</a></li>
 					<li><a style="margin-right: 3rem;" href="contacts.html">Contacts</a></li>
-					<li class="menu-btn"><a style="border-bottom: none;"  href="#"><img src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
+					<li class="menu-btn" style="width: 11.3rem;"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
 						<ul>
 							<li><a style="margin-left: 0;" href="index.html">Home</a></li>
 							<li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
 							<li><a style="margin-left: 0;" href="handbook.html">Handbook</a></li>
 							<li><a style="margin-left: 0;" href="archi.html">Archives</a></li>
 							<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
+							<li><a style="margin-left: 0;" href="https://senzala.com.ua/">Senzala UA</a></li>
 							<li><a style="margin-left: 0;" href="contacts.html">Contacts</a></li>
 						</ul>
 					</li>
