--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><a href="about us.html">About us</a></li>
 					<li><a href="https://senzala.com.ua/">Senzala UA</a></li>
 					<li><a style="margin-right: 3rem;" href="contacts.html">Contacts</a></li>
-					<li class="menu-btn" style="width: 11.3rem;"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
+					<li class="menu-btn"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
 						<ul>
 							<li><a style="margin-left: 0;" href="index.html">Home</a></li>
 							<li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
