--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 
 	<link rel="stylesheet" href="Capoeira Quotes.css">
-	<script src="" defer></script>
+	<script src="CQ.js" defer></script>
 
 </head>
 <body>
@@ -17,14 +17,14 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="basic.html">Basic Info</a>
+					<li><a href="#basic">Basic Info</a>
 						<ul>
 							<li><a style="margin-left: 0;" href="mestres.html">Mestres</a></li>
 							<li><a style="margin-left: 0;" href="cords.html">Cordas</a></li>
 							<li><a style="margin-left: 0;" href="history.html">History</a></li>
 						</ul>
 					</li>
-					<li><a href="handbook.html">Handbook</a>
+					<li><a href="#handbook">Handbook</a>
 						<ul>
 							<li><a style="margin-left: 0;" href="instruments.html">Instruments</a></li>
 							<li><a style="margin-left: 0;" href="list_r.html">Rhythms</a></li>
@@ -34,7 +34,7 @@
 							<li><a style="margin-left: 0; display: none;" href="Movements.html">Samba de roda</a></li>
 						</ul>
 					</li>
-					<li><a href="archi.html">Archives</a>
+					<li><a href="#archi">Archives</a>
 						<ul>
 							<li><a style="margin-left: 0; display: none;" href="insight.html">Insight</a></li>
 							<li><a style="margin-left: 0;" href="interview.html">Interviews</a></li>
@@ -44,7 +44,7 @@
 					</li>
 					<li><a href="about us.html">About us</a></li>
 					<li><a href="https://senzala.com.ua/">Senzala UA</a></li>
-					<li><a style="margin-right: 3rem;" href="contacts.html">Contacts</a></li>
+					<li><a style="margin-right: 3rem;" href="#contacts">Contacts</a></li>
 					<li class="menu-btn"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
 						<ul>
 							<li><a style="margin-left: 0;" href="index.html">Home</a></li>
@@ -108,7 +108,7 @@
 
         <section id="docs">
     
-            <div class="book-list" id="archi">
+            <div class="book-list" id="handbook">
 
 				<img src="https://i.pinimg.com/564x/d4/8a/5c/d48a5c1f1db7aeb2580a175568a98909.jpg">	
 				<div class="content">
@@ -156,6 +156,10 @@
 
 		<div class="credit">created by <span>Nightmare_2077</span> |All Rights Reserved</div>
 	</section>
+
+	<!--footer section ends-->
+</body>
+</html>
 
 	<!--footer section ends-->
 </body>
