--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 					</ul>
 				</li>
 				<li><a href="about us.html">About us</a></li>
+				<li><a href="https://senzala.com.ua/">Senzala UA</a></li>
 				<li><a href="#contact">Contacts</a></li>
 		        <li class="menu-btn"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
 					<ul>
@@ -50,6 +51,7 @@
 						<li><a style="margin-left: 0;" href="#handbook">Handbook</a></li>
 						<li><a style="margin-left: 0;" href="#archi">Archives</a></li>
 						<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
+						<li><a style="margin-left: 0;" href="https://senzala.com.ua/">Senzala UA</a></li>
 						<li><a style="margin-left: 0;" href="#contact">Contacts</a></li>
 					</ul>
 				</li>
