--- a/insight.html
+++ b/insight.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 
 	<link rel="stylesheet" href="insight.css">
-	<script src="CQ.js" defer></script>
+	<script src="" defer></script>
 
 </head>
 <body>
