--- a/nega.html
+++ b/nega.html
@@ -38,21 +38,23 @@
 					</li>
 					<li><a href="archi.html">Archives</a>
 						<ul>
-							<li><a style="margin-left: 0;  display: none;" href="insight.html">Insight</a></li>
+							<li><a style="margin-left: 0; display: none;" href="insight.html">Insight</a></li>
 							<li><a style="margin-left: 0;" href="interview.html">Interviews</a></li>
 							<li><a style="margin-left: 0;" href="quotes.html">Mestres' Quotes</a></li>
 							<li><a style="margin-left: 0;" href="media.html">Media</a></li>
 						</ul>
 					</li>
 					<li><a href="about us.html">About us</a></li>
+					<li><a href="https://senzala.com.ua/">Senzala UA</a></li>
 					<li><a style="margin-right: 3rem;" href="contacts.html">Contacts</a></li>
-					<li class="menu-btn"><a style="border-bottom: none;"  href="#"><img src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
+					<li class="menu-btn" style="width: 11.3rem;"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
 						<ul>
 							<li><a style="margin-left: 0;" href="index.html">Home</a></li>
 							<li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
 							<li><a style="margin-left: 0;" href="handbook.html">Handbook</a></li>
 							<li><a style="margin-left: 0;" href="archi.html">Archives</a></li>
 							<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
+							<li><a style="margin-left: 0;" href="https://senzala.com.ua/">Senzala UA</a></li>
 							<li><a style="margin-left: 0;" href="contacts.html">Contacts</a></li>
 						</ul>
 					</li>
