--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 		        <li class="menu-btn"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
 					<ul>
 						<li><a style="margin-left: 0;" href="index.html">Home</a></li>
-						<li><a style="margin-left: 0;" href="#basic">Basic Info</a></li>
-						<li><a style="margin-left: 0;" href="#handbook">Handbook</a></li>
-						<li><a style="margin-left: 0;" href="#archi">Archives</a></li>
+						<li><a style="margin-left: 0;" href="basic.html">Basic Info</a></li>
+						<li><a style="margin-left: 0;" href="handbook.html">Handbook</a></li>
+						<li><a style="margin-left: 0;" href="archi.html">Archives</a></li>
 						<li><a style="margin-left: 0;" href="about us.html">About us</a></li>
 						<li><a style="margin-left: 0;" href="https://senzala.com.ua/">Senzala UA</a></li>
-						<li><a style="margin-left: 0;" href="#contact">Contacts</a></li>
+						<li><a style="margin-left: 0;" href="contact.html">Contacts</a></li>
 					</ul>
 				</li>
 			</ul>
