--- a/cords.html
+++ b/cords.html
@@ -62,7 +62,7 @@
 		</header>
 	</section>
 
-	<h1 class="heading">- Tap to see in color -</h1>
+	<h1 class="heading">- Click to see in color -</h1>
 
     <div class="container">
         <span class="slider" id="slider1"></span>
