--- a/cords.html
+++ b/cords.html
@@ -138,7 +138,7 @@
 				<div class="img" id="img6">
                     <img src="corda verte.jpg" class="cordas">
 					<div class="hidden">
-						<h3>Corda Verte</h3>
+						<h3>Corda Verde</h3>
 					    <p class="hidden">The green belt signifies the first professorial degree. The period between the blue belt and the subsequent belts is typically longer, as progress requires more time and dedication. Green belts are awarded by a master, who assesses the student's level of capoeira, their work, and their involvement in the life of Senzala. This belt reflects a significant milestone in one's capoeira journey and demonstrates a high level of proficiency and commitment.</p>
 					</div>
                 </div>
