--- a/cords.html
+++ b/cords.html
@@ -81,7 +81,7 @@
     
             <div class="slide_div" id="slide_1">
                 <div class="img" id="img1">
-                    <img src="https://i.ibb.co/H7TFCh9/corda-branco-02.jpg" class="cordas">
+                    <img src="corda branco.jpg" class="cordas">
 					<div class="hidden">
 						<h3>Corda Branco</h3>
 					    <p class="hidden">The white belt in the Senzala system represents the initial level, where the student should have a basic understanding of capoeira, know the fundamental principles and movements, but is not necessarily required to perform them perfectly or flawlessly. This belt signifies that the student is just beginning their journey in capoeira and continues to develop, deepen their skills, and improve their performance as they learn and practice.</p>
